--- a/Estilos/Css.css
+++ b/Estilos/Css.css
@@ -55,13 +55,57 @@ body {
     font-weight: 500;
     text-decoration: none;
     margin-left: 52px;
-    color: black; 
 }
 
 #logo img {
     width: 110px;
     padding-left: 5px;
 }
+
+ul li ul.dropdown li{
+    display: block;
+}
+
+.listHome a {
+    color: red;
+}
+
+ul li ul.dropdown {
+    width: 100%;
+    background: white;
+    position: absolute;
+    z-index: 999;
+    display: none;
+    padding-top: 22px;
+}
+
+ul.dropdown li{
+    border-bottom: 1px solid rgb(219 215 215 / 28%);
+    
+}
+
+.listHome:hover {
+    border-bottom: 1px solid black;
+}
+
+ul li:hover ul.dropdown {
+    display: block;
+}
+
+ul.dropdown li {
+    margin: 15px 4px 8px;
+}
+
+ul a {
+    text-decoration: none;
+    color: black;
+}
+
+ul a:hover .seta {
+    padding-left: 10px;
+}
+
+
 
 /* ---------------------------Body---------------------------- */
 
@@ -241,4 +285,15 @@ footer img {
     text-align: center;
     padding: 7px 0;
     margin-top: 18px;
+}
+
+span#nome a {
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    font-size: 17px;
+}
+
+span#nome a:hover {
+    border-bottom: 1px solid black;
 }
