--- a/Estilos/Css.css
+++ b/Estilos/Css.css
@@ -26,7 +26,7 @@ body {
     position: fixed;
     width: 100%;
     padding: 20px 10.5%;
-    background: var(--background-color01);
+    background-color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -104,8 +104,6 @@ ul a {
 ul a:hover .seta {
     padding-left: 10px;
 }
-
-
 
 /* ---------------------------Body---------------------------- */
 
@@ -216,9 +214,6 @@ ul a:hover .seta {
     border: 1px solid black;
     font-weight: 700;
 }
-
-
-
 
 /* --------------------------Footer--------------------------- */
 
