--- a/Estilos/Css.css
+++ b/Estilos/Css.css
@@ -248,6 +248,7 @@ footer img {
 }
 
 .footer-col h4 {
+    font-size: ;
     text-transform: capitalize;
     margin-bottom: 10px;
     border-bottom: 1px solid white
