--- a/Páginas do site/Página Receitas/Estilos/Estilos.css
+++ b/Páginas do site/Página Receitas/Estilos/Estilos.css
@@ -97,8 +97,8 @@ ul a:hover .seta {
 /* -----------------------------Body----------------------------- */
 
 #container {
-    padding: 35px 0;
-    padding: 0 10.5%;
+    padding: 35px 10.5% 0;
+    background: linear-gradient(to bottom, #F6F3EB, white);
 }
 
 .banner {
